--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "inter-streaming-server",
-  "version": "1.0.0",
-  "description": "ESP32-CAM streaming relay server",
+  "version": "2.0.0",
+  "description": "ESP32-CAM streaming relay server with direct HTTP POST support",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": ["streaming", "esp32", "websocket"],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=14.0.0"
   }
 }
